--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "delayed-job",
-  "version": "0.0.2",
+  "name": "@kev_nz/delayed-job",
+  "version": "1.0.0",
   "description": "Redis backed Node.js implementation of delayed job",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "node ./examples/test.js",
+    "lint:examples": "eslint ./examples",
+    "work:redis": "node ./examples/redis.js",
+    "work:memory": "node ./examples/memory.js",
+    "lint": "eslint ./lib"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thatguydan/delayed-job.git"
+    "url": "https://github.com/kev_nz/delayed-job.git"
   },
   "keywords": [
     "Delayed",
     "Job",
     "Redis"
   ],
-  "author": "Daniel Friedman",
+  "author": "Kevin Isom<kevin.isom@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "gitHead": "37886c178a627241ba03fae273475f2c5fee9639",
   "devDependencies": {
-    "should": "~1.2.2",
-    "mocha": "~1.9.0"
+    "@kev_nz/eslint-config": "^1.0.0",
+    "eslint": "^5.7.0"
   },
   "dependencies": {
-    "redis-url": "~0.1.0",
-    "async": "~0.2.8"
+    "cache-base": "^4.0.0",
+    "ioredis": "^4.2.0",
+    "ioredis-mock": "^4.1.1"
   }
 }
