--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Redis backed Node.js implementation of delayed job",
   "main": "index.js",
   "files": [
-    "index.js",
-    "lib",
-    "examples"
+    "/index.js",
+    "/lib",
+    "/examples"
   ],
   "scripts": {
     "test": "node ./examples/test.js",
